fix Person class